# rn-cpp

./: README.md  RNCPPCode.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  local.properties
android/src/main/java/com/mariusreimer/rncppcode/: RNCPPCodeModule.java
cpp-code/src/include/: example.h  v99core.h
cpp-code/src/src/: example.cpp  v99core.cpp
ios/: RNCPPCode.h  RNCPPCode.mm
ios/RNCPPCode.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
ios/RNCPPCode.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/: CPPCode.js  index.js
